Adds swagger documentation.  Implements code review feedback.